[gd_scene load_steps=14 format=3 uid="uid://besa2l7t8hfxn"]

[ext_resource type="Script" path="res://scenes/entities/enemy/enemy.gd" id="1_h1ua6"]
[ext_resource type="Script" path="res://scenes/components/hitbox2d_component.gd" id="2_yi83c"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="3_inyfw"]
[ext_resource type="Script" path="res://scenes/components/damagebox2d_component.gd" id="4_1swpu"]
[ext_resource type="PackedScene" uid="uid://s86uepx7c75l" path="res://scenes/entities/laser_cannon.tscn" id="5_jsq2i"]
[ext_resource type="PackedScene" uid="uid://dr6d68qgrdy2j" path="res://scenes/entities/laser.tscn" id="6_4ik8r"]
[ext_resource type="Resource" uid="uid://u67td408whay" path="res://resources/lasers/enemy_laser_stats.tres" id="7_rhnjw"]
[ext_resource type="Script" path="res://scenes/components/state_machine_component.gd" id="8_1lllw"]
[ext_resource type="Script" path="res://scenes/entities/enemy/enemy_move_state.gd" id="9_yy67w"]
[ext_resource type="Script" path="res://scenes/entities/enemy/enemy_fall_state.gd" id="10_8by0e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kcr5"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbhkl"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hy2v"]
size = Vector2(40, 40)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_h1ua6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("_health_component")]
collision_layer = 2
script = ExtResource("2_yi83c")
_health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_0kcr5")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_inyfw")

[node name="DamageboxComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("4_1swpu")
damage = 999

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageboxComponent"]
shape = SubResource("RectangleShape2D_pbhkl")

[node name="BorderDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderDetector"]
shape = SubResource("RectangleShape2D_6hy2v")

[node name="LaserCannon" parent="." node_paths=PackedStringArray("spawn_point") instance=ExtResource("5_jsq2i")]
laser_scene = ExtResource("6_4ik8r")
laser_stats = ExtResource("7_rhnjw")
spawn_point = NodePath("../LaserSpawnPoint")

[node name="LaserSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 20)

[node name="ShootDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StateMachComponent" type="Node" parent="." node_paths=PackedStringArray("target", "_initial_state")]
script = ExtResource("8_1lllw")
target = NodePath("..")
_initial_state = NodePath("MoveAndShootState")
_auto_start = true

[node name="MoveAndShootState" type="Node" parent="StateMachComponent" node_paths=PackedStringArray("_fall_state")]
script = ExtResource("9_yy67w")
_fall_state = NodePath("../FallState")

[node name="FallState" type="Node" parent="StateMachComponent" node_paths=PackedStringArray("_move_state")]
script = ExtResource("10_8by0e")
_move_state = NodePath("../MoveAndShootState")

[connection signal="health_became_zero_event" from="HealthComponent" to="." method="_on_health_became_zero_event"]
[connection signal="body_entered" from="BorderDetector" to="StateMachComponent/MoveAndShootState" method="_on_border_hit"]
